// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`launchpad: reducer app upload on failure 1`] = `
Object {
  "appPackage": null,
  "error": "Error uploading app",
  "firstLoad": true,
  "requestCompleted": false,
  "username": "",
}
`;

exports[`launchpad: reducer app upload on success 1`] = `
Object {
  "appPackage": null,
  "error": "",
  "firstLoad": true,
  "requestCompleted": true,
  "username": "",
}
`;

exports[`launchpad: reducer change user name 1`] = `
Object {
  "appPackage": null,
  "error": "",
  "firstLoad": true,
  "requestCompleted": false,
  "username": "tanuj",
}
`;

exports[`launchpad: reducer load launchpad 1`] = `
Object {
  "appPackage": null,
  "error": "",
  "firstLoad": false,
  "requestCompleted": false,
  "username": "",
}
`;

exports[`launchpad: reducer reset app  1`] = `
Object {
  "appPackage": null,
  "error": "",
  "firstLoad": true,
  "requestCompleted": false,
  "username": "",
}
`;

exports[`launchpad: reducer set app error 1`] = `
Object {
  "appPackage": null,
  "error": "Error set app",
  "firstLoad": true,
  "requestCompleted": false,
  "username": "",
}
`;

exports[`launchpad: reducer set initial state 1`] = `
Object {
  "appPackage": null,
  "error": "",
  "firstLoad": true,
  "requestCompleted": false,
  "username": "",
}
`;
